# rust-practice

./: .gitignore  Cargo.toml  LICENSE  README.md
adv/ai-chatbot/: Cargo.toml  README.md
adv/ai-chatbot/src/: api.rs  app.rs  main.rs
adv/axum-example/: Cargo.toml  README.md
adv/axum-example/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
adv/axum-example/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
adv/axum-example/tests/: quick_dev.rs
adv/clap-tutorial/: Cargo.toml  README.md
adv/clap-tutorial/src/: main.rs
adv/crud-api/: Dockerfile
adv/crud_api/: Cargo.toml  README.md  docker-compose.yml
adv/crud_api/src/: main.rs
adv/crust-of-rust/: README.md
adv/crust-of-rust/lifetime-annotations/: README.md
adv/diesel_demo/: .env.example  README.md
adv/diesel_demo/src/: lib.rs
adv/employee_text_interface/: Cargo.toml  README.md
adv/employee_text_interface/src/: main.rs
adv/guess-game/: README.md
adv/guess-game/guess_game_adv/: Cargo.toml
adv/guess-game/guess_game_basic/: Cargo.toml
adv/median_mode/: README.md
adv/median_mode/src/: main.rs
adv/mini-redis-tokio/: Cargo.toml  README.md
adv/minigrep/: README.md  poem.txt
adv/my-redis-tokio/: README.md
adv/pig_latin/: README.md
adv/rust-tcp/: Cargo.toml  README.md  script.sh
adv/rusty-os/: Cargo.toml  README.md
adv/rusty_os/: Cargo.toml  README.md
adv/serialize-json/: Cargo.toml
adv/solana-programs/: README.md
adv/sysmon/: Cargo.toml  README.md
adv/tmon/: Cargo.toml  README.md
adv/weather-cli/: Cargo.toml  README.md
basics/: Cargo.toml  README.md
(+37 files in other folders)
