[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = {version = "1", features = ["fast-rng", "v4"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
